--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,16 @@
     <string name="register_city">City</string>
     <string name="register_input_city">Your City</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home_vnc_account">VNC ACCOUNT</string>
+    <string name="home_username">Username</string>
+    <string name="home_full_name">Full name</string>
+    <string name="home_gender">Gender</string>
+    <string name="home_birthday">Birthday</string>
+    <string name="home_change_password">Change Password</string>
+    <string name="home_sip_account">SIP ACCOUNT</string>
+    <string name="home_sip_display_name">Sip Display Name</string>
+    <string name="home_sip_username">Sip Username</string>
+    <string name="home_sip_password">Sip Password</string>
+    <string name="home_sip_domain">Sip Domain</string>
+    <string name="home_sip_status">Sip Status</string>
 </resources>
