--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,11 @@
     <string name="edit_dialog_city">City</string>
     <string name="edit_dialog_update">Update</string>
     <string name="edit_dialog_cancel">Cancel</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    
+    <string name="change_password_dialog_title">Change Password</string>
+    <string name="change_password_dialog_old_password">Old Password</string>
+    <string name="change_password_dialog_new_password">New Password</string>
+    <string name="change_password_dialog_confirm_new_password">Confirm New Password</string>
+    <string name="change_password_dialog_change">CHANGE</string>
+    <string name="change_password_dialog_cancel">CANCEL</string>
 </resources>
