--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="register_city">City</string>
     <string name="register_input_city">Your City</string>
 
-    <string name="devices_notification">There is no connected device</string>
+    <string name="devices_notification">No available devices</string>
 
     <string name="settings_vnc_account">VNC ACCOUNT</string>
     <string name="settings_username">Username</string>
