--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,59 +1,58 @@
 <resources>
     <string name="app_name">OTT</string>
-    <string name="register_tittle">Register Account</string>
-    <string name="home_title">VNC OTT</string>
-    <string name="add_device_title">Add device</string>
+
     <string name="ok">OK</string>
     <string name="yes">YES</string>
     <string name="no">NO</string>
 
-    <string name="request_success_01">Login successful</string>
-    <string name="request_success_02">Successful</string>
-    <string name="request_success_03">Logout successful</string>
-    <string name="request_success_04">Update successful !!!</string>
+    <string name="login_activity_header_title">Always Be Connected</string>
+    <string name="login_activity_input_email">Email</string>
+    <string name="login_activity_input_password">Password</string>
+    <string name="login_activity_forgot_password">Forgot Password ?</string>
+    <string name="login_activity_button_login">LOGIN</string>
+    <string name="login_activity_button_register">REGISTER</string>
 
-    <string name="login_header_title">Always Be Connected</string>
-    <string name="login_input_email">Email</string>
-    <string name="login_input_password">Password</string>
-    <string name="login_forgot_password">Forgot Password ?</string>
-    <string name="login_button_login">LOGIN</string>
-    <string name="login_button_register">REGISTER</string>
+    <string name="register_activity_tittle">Register Account</string>
+    <string name="register_activity_email">Email (*)</string>
+    <string name="register_activity_input_email">Your Email</string>
+    <string name="register_activity_password">Password (*)</string>
+    <string name="register_activity_input_password">Password</string>
+    <string name="register_activity_confirm_password">Confirm Password (*)</string>
+    <string name="register_activity_input_confirm_password">Confirm Password</string>
+    <string name="register_activity_first_name">First Name</string>
+    <string name="register_activity_input_first_name">First name</string>
+    <string name="register_activity_last_name">Last Name</string>
+    <string name="register_activity_input_last_name">Last name</string>
+    <string name="register_activity_sex">Sex</string>
+    <string name="register_activity_male">Male</string>
+    <string name="register_activity_female">Female</string>
+    <string name="register_activity_other">Other</string>
+    <string name="register_activity_birthday">Date Of Birth</string>
+    <string name="register_activity_input_birthday">Select day</string>
+    <string name="register_activity_country">Country</string>
+    <string name="register_activity_input_country">Your country</string>
+    <string name="register_activity_city">City</string>
+    <string name="register_activity_input_city">Your City</string>
 
-    <string name="register_email">Email (*)</string>
-    <string name="register_input_email">Your Email</string>
-    <string name="register_password">Password (*)</string>
-    <string name="register_input_password">Password</string>
-    <string name="register_confirm_password">Confirm Password (*)</string>
-    <string name="register_input_confirm_password">Confirm Password</string>
-    <string name="register_first_name">First Name</string>
-    <string name="register_input_first_name">First name</string>
-    <string name="register_last_name">Last Name</string>
-    <string name="register_input_last_name">Last name</string>
-    <string name="register_sex">Sex</string>
-    <string name="register_male">Male</string>
-    <string name="register_female">Female</string>
-    <string name="register_other">Other</string>
-    <string name="register_birthday">Date Of Birth</string>
-    <string name="register_input_birthday">Select day</string>
-    <string name="register_country">Country</string>
-    <string name="register_input_country">Your country</string>
-    <string name="register_city">City</string>
-    <string name="register_input_city">Your City</string>
-    
-    <string name="add_device_wifi_name">Wi-Fi name</string>
-    <string name="add_device_wifi_password">Wi-Fi password</string>
-    <string name="add_device_switch_wifi">Switch Wi-Fi Network</string>
-    <string name="add_device_submit">Submit</string>
+    <string name="add_device_activity_title">Add device</string>
+    <string name="add_device_activity_wifi_name">Wi-Fi name</string>
+    <string name="add_device_activity_wifi_password">Wi-Fi password</string>
+    <string name="add_device_activity_switch_wifi">Switch Wi-Fi Network</string>
+    <string name="add_device_activity_submit">Submit</string>
 
-    <string name="devices_notification">No available devices</string>
+    <string name="list_device_fragment_add">Add</string>
 
-    <string name="settings_vnc_account">VNC ACCOUNT</string>
-    <string name="settings_username">Username</string>
-    <string name="settings_full_name">Full name</string>
-    <string name="settings_gender">Gender</string>
-    <string name="settings_birthday">Birthday</string>
-    <string name="settings_change_password">Change Password</string>
-    <string name="settings_logout">Log out</string>
+    <string name="home_activity_title">VNC OTT</string>
+
+    <string name="devices_fragment_notification">No available devices</string>
+
+    <string name="settings_fragment_vnc_account">VNC ACCOUNT</string>
+    <string name="settings_fragment_username">Username</string>
+    <string name="settings_fragment_full_name">Full name</string>
+    <string name="settings_fragment_gender">Gender</string>
+    <string name="settings_fragment_birthday">Birthday</string>
+    <string name="settings_fragment_change_password">Change Password</string>
+    <string name="settings_fragment_logout">Log out</string>
 
     <string name="edit_dialog_title">Edit VNC Account</string>
     <string name="edit_dialog_first_name">First Name</string>
