--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">OTT</string>
+    <string name="app_name">IoT</string>
 
     <string name="ok">OK</string>
     <string name="yes">YES</string>
     <string name="no">NO</string>
+    <string name="cancel">CANCEL</string>
 
     <string name="login_activity_header_title">Always Be Connected</string>
     <string name="login_activity_input_email">Email</string>
@@ -34,15 +35,16 @@
     <string name="register_activity_city">City</string>
     <string name="register_activity_input_city">Your City</string>
 
-    <string name="add_device_activity_title">Add device</string>
-    <string name="add_device_activity_wifi_name">Wi-Fi name</string>
-    <string name="add_device_activity_wifi_password">Wi-Fi password</string>
-    <string name="add_device_activity_switch_wifi">Switch Wi-Fi Network</string>
-    <string name="add_device_activity_submit">Submit</string>
+    <string name="home_activity_title">VNC OTT</string>
+
+    <string name="config_device_fragment_title">Add device</string>
+    <string name="config_device_fragment_wifi_name">Wi-Fi name</string>
+    <string name="config_device_fragment_wifi_password">Wi-Fi password</string>
+    <string name="config_device_fragment_choose_wifi_ssid">Choose a wifi SSID</string>
+    <string name="config_device_fragment_switch_wifi">Switch Wi-Fi Network</string>
+    <string name="config_device_fragment_submit">Submit</string>
 
     <string name="list_device_fragment_add">Add</string>
-
-    <string name="home_activity_title">VNC OTT</string>
 
     <string name="devices_fragment_notification">No available devices</string>
 
@@ -80,7 +82,4 @@
     <string name="forgot_password_dialog_send">SEND</string>
 
     <string name="logout_dialog_warning">Are you sure you want to log out?</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
