--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,7 @@
     <string name="forgot_password_dialog_send">SEND</string>
 
     <string name="logout_dialog_warning">Are you sure you want to log out?</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
